# gsi

./: .gitignore  .gsiignore  .gsiignore.example  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  pyproject.toml
.github/workflows/: ci.yml
gsi/: __init__.py  __main__.py  gsiignore.py
gsi-clean/: README.md  pyproject.toml
gsi-clean/gsi/modules/: dependency_scanner.py  secret_scanner.py
gsi-clean/gsi/scanner/: github_client.py
gsi-clean/tests/: test_dependency_scanner.py  test_github_client.py  test_secret_scanner.py
gsi/config/: __init__.py  settings.py
gsi/modules/: __init__.py  dependency_scanner.py  pattern_scanner.py  risk_scorer.py  secret_scanner.py
gsi/reports/: __init__.py  report_generator.py
gsi/scanner/: __init__.py  github_client.py
tests/: test_pattern_scanner.py  test_risk_scorer.py  test_secret_scanner.py
